[project]
name = "physics-simulations"
version = "0.1.0"
dependencies = [
    "open3d"
]
requires-python = "==3.11"
authors = []
maintainers = []
description = ""
readme = "README.md"
keywords = []
classifiers = [
  "Programming Language :: Python"
]

[project.scripts]
bouncing_balls = "bouncing_balls:main.py"
